--- a/app.json
+++ b/app.json
@@ -15,14 +15,14 @@
   "tabBar": {
     "list": [
       {
-        "pagePath": "pages/index/index",
-        "text": "电影",
+        "pagePath": "pages/lists/lists",
+        "text": "首页",
         "iconPath": "images/tabbar/movie.png",
         "selectedIconPath": "images/tabbar/movieSelected.png"
       },
       {
-        "pagePath": "pages/logs/logs",
-        "text": "我的",
+        "pagePath": "pages/aboutme/aboutme",
+        "text": "关于我们",
         "iconPath": "images/tabbar/mine.png",
         "selectedIconPath": "images/tabbar/mineSelected.png"
       }
